devtools/client/debugger/src/components/Editor/Editor.css
.editor-wrapper {
  --debug-line-border: rgb(145, 188, 219);
  --debug-expression-background: rgba(202, 227, 255, 0.5);
  --debug-line-error-border: rgb(255, 0, 0);
  --debug-expression-error-background: rgba(231, 116, 113, 0.3);
  --highlight-line-duration: 1500ms;
}

.theme-dark .editor-wrapper {
  --debug-expression-background: rgba(202, 227, 255, 0.3);
  --debug-line-border: #7786a2;
}

.editor-wrapper .CodeMirror-linewidget {
  margin-right: -7px;
}

.editor-wrapper {
  min-width: 0 !important;
}

.CodeMirror.cm-s-mozilla,
.CodeMirror-scroll,
.CodeMirror-sizer {
  overflow-anchor: none;
}





.editor-wrapper {
  position: absolute;
  width: calc(100% - 1px);
  top: var(--editor-header-height);
  bottom: var(--editor-footer-height);
  left: 0px;
}

html[dir="rtl"] .editor-mount {
  direction: ltr;
}

.theme-light .cm-s-mozilla .empty-line .CodeMirror-linenumber {
  color: var(--grey-40);
}

.theme-dark .cm-s-mozilla .empty-line .CodeMirror-linenumber {
  color: var(--grey-50);
}

.function-search {
  max-height: 300px;
  overflow: hidden;
}

.function-search .results {
  height: auto;
}

.editor.hit-marker {
  height: 15px;
}

.editor-wrapper .highlight-lines {
  background: var(--theme-selection-background-hover);
}

.CodeMirror {
  width: 100%;
  height: 100%;
}

.editor-wrapper .editor-mount {
  width: 100%;
  background-color: var(--theme-body-background);
  font-size: var(--theme-code-font-size);
  line-height: var(--theme-code-line-height);
}

.folding-enabled .CodeMirror-linenumber {
  text-align: left;
  padding: 0 0 0 2px;
}


.editor-wrapper:not(.skip-pausing)
  .new-breakpoint
  .CodeMirror-gutter-wrapper
  .CodeMirror-linenumber {
  color: white;
}


.new-breakpoint .CodeMirror-gutter-elt:nth-child(2) {
  z-index: 0;
}

.theme-dark .editor-wrapper .CodeMirror-line .cm-comment {
  color: var(--theme-comment);
}

.debug-expression {
  background-color: var(--debug-expression-background);
  border-style: solid;
  border-color: var(--debug-expression-background);
  border-width: 1px 0px 1px 0px;
  position: relative;
}

.debug-expression::before {
  content: "";
  line-height: 1px;
  border-top: 1px solid var(--blue-50);
  background: transparent;
  position: absolute;
  top: -2px;
  left: 0px;
  width: 100%;
 }

.debug-expression::after {
  content: "";
  line-height: 1px;
  border-bottom: 1px solid var(--blue-50);
  position: absolute;
  bottom: -2px;
  left: 0px;
  width: 100%;
 }

.to-line-end ~ .CodeMirror-widget {
  background-color: var(--debug-expression-background);
}

.debug-expression-error {
  background-color: var(--debug-expression-error-background);
}

.new-debug-line > .CodeMirror-line {
  background-color: transparent !important;
  outline: var(--debug-line-border) solid 1px;
}



.new-debug-line .CodeMirror-activeline-background {
  display: none;
}

.new-debug-line-error > .CodeMirror-line {
  background-color: var(--debug-expression-error-background) !important;
  outline: var(--debug-line-error-border) solid 1px;
}



.new-debug-line-error .CodeMirror-activeline-background {
  display: none;
}
.highlight-line .CodeMirror-line {
  animation: fade-highlight-out var(--highlight-line-duration) normal forwards;
}

@keyframes fade-highlight-out {
  0% {
    background-color: var(--theme-highlight-gray);
  }
  100% {
    background-color: transparent;
  }
}

.theme-dark .highlight-line .CodeMirror-line {
  animation: fade-highlight-out-dark 1s normal forwards;
}

@keyframes fade-highlight-out-dark {
  0% {
    background-color: var(--theme-comment);
  }
  100% {
    background-color: transparent;
  }
}

.CodeMirror-guttermarker-subtle {
  visibility: hidden;
}

.visible {
  visibility: visible;
}

.download-anchor {
  display: none;
}

